sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_depart_false/errors.duarouter
Error: Attribute 'depart' in definition of vehicle '1' is not a time value.
Quitting (on error).
